--- a/year/2022.md
+++ b/year/2022.md
@@ -90,6 +90,7 @@
 | 2022.4.21 | 杂志   | 『MAQUIA(マキア)』2022年6月号  | [微博](https://weibo.com/5177703789/Lpn4c5dmq) | [试读](https://weibo.com/5177703789/Lpig79Ps9)|
 | 2022.4.21 | 杂志   | 『Myojo』2022年6月号  | [微博](https://weibo.com/5177703789/LpwCfhnHM) | |
 | 2022.4.23 | 音乐   | NHK新音楽番組『Venue101』MC 23:00~ 嘉宾: SKYHI『BareBare』 羊文学『光るとき』 LuckyKilimanjaro『週休8日』 |  [生](https://www.bilibili.com/video/BV1LY4y1Y77K)  |                        |
+| 2022.4.27 | 杂志   | 『TV LIFE』2022年9号  | [微博](https://weibo.com/5177703789/LqlX0mARu) | |
 | 2022.4.30 | 音乐   | NHK新音楽番組『Venue101』MC 23:00~ 嘉宾: 大橋ちっぽけ『嫌でもね』 BiSH『ごめんね』 ファーストサマーウイカ『OpentheDoor』 |    |                  |
 | 2022.5.7  | 音乐剧 | 『四月は君の嘘』東京・日生劇場(~5.29)                        |                                                              |                                                              |
 | 2022.5.8  | 电影 | 『行骗天下JP 英雄篇』 Blu-ray＆DVD発売   |                             |   [主页](https://movie-product.ponycanyon.co.jp/item132/)                        |
