--- a/year/2022.md
+++ b/year/2022.md
@@ -83,18 +83,19 @@
 | 2022.4.3 | 番组   | 『ニノさん』日本テレビ 10:25〜11:25 | [生](https://www.bilibili.com/video/BV1N5411D7dY)  |[推特](https://twitter.com/ninosan_ntv)‖[主页](https://www.ntv.co.jp/ninosan/) |
 | 2022.4.6 | 杂志   | 『anan』No.2294  2022年4月13日号  | [微博](https://weibo.com/5177703789/Ln5B7E8dy)  |[翻译](https://weibo.com/ttarticle/p/show?id=2309404762235531822179) |
 | 2022.4.9 | 音乐   | 富士台 MUSIC FAIR 18:00～18:30『四月は君の嘘』- 『The Beautiful Game』『旅に出よう』『Speed Of Sound\~カラフルに輝きながら\~』 | [熟](https://www.bilibili.com/video/BV15L4y157Pc)  | |
-| 2022.4.9 | 音乐   | NHK新音楽番組『Venue101』MC 23:00~ 嘉宾: INI『CALL119』 櫻坂46『僕のジレンマ』 ITZY『Voltage』  | [熟](https://www.bilibili.com/video/BV1nY4y1v7zx)   |                                        |
+| 2022.4.9 | 音乐   | NHK新音楽番組『Venue101』MC 23:00~ 嘉宾: INI『CALL 119』 櫻坂46『僕のジレンマ』 ITZY『Voltage』  | [熟](https://www.bilibili.com/video/BV1nY4y1v7zx)   |                                        |
 | 2022.4.16 | 音乐   | 発表！Nコン2022課題曲(旁白) 15:00〜15:30 |   [生](https://www.bilibili.com/video/BV1V94y1o74N)     |   [主页](https://tvguide.myjcom.jp/detail/?channelType=2&serviceCode=1032_32737&eventId=23489&programDate=20220416&app=1)                                                           |
-| 2022.4.16 | 音乐   | NHK新音楽番組『Venue101』MC 23:00~ 嘉宾: 雨のパレード『firststep』 ALI『TEENAGECITYRIOT feat. R指定』 NiziU『ASOBO』  |  [熟](https://www.bilibili.com/video/BV1zY4y1a7gn)  |                     |
+| 2022.4.16 | 音乐   | NHK新音楽番組『Venue101』MC 23:00~ 嘉宾: 雨のパレード『first step』 ALI『TEENAGE CITY RIOT feat. R-指定』 NiziU『ASOBO』  |  [熟](https://www.bilibili.com/video/BV1zY4y1a7gn)  |                     |
 | 2022.4.19  | 杂志 | 『BARFOUT!』 バァフアウト! 2022年5月号  Volume 320          | [微博](https://weibo.com/5177703789/LpjxhyJYn)  |   [amazon](https://www.amazon.co.jp/dp/4344954238/ref=sr_1_1?__mk_ja_JP=%E3%82%AB%E3%82%BF%E3%82%AB%E3%83%8A&crid=3OPN98NSHVP28&keywords=barfout%21+%E3%83%90%E3%82%A1%E3%83%95%E3%82%A2%E3%82%A6%E3%83%88%21+2022%E5%B9%B4+5%E6%9C%88%E5%8F%B7&qid=1646747612&sprefix=barfout+%E3%83%90%E3%82%A1%E3%83%95%E3%82%A2%E3%82%A6%E3%83%88+2022%E5%B9%B45%E6%9C%88%E5%8F%B7%2Caps%2C226&sr=8-1)    |       
 | 2022.4.21 | 杂志   | 『MAQUIA(マキア)』2022年6月号  | [微博](https://weibo.com/5177703789/Lpn4c5dmq) | [试读](https://weibo.com/5177703789/Lpig79Ps9)|
 | 2022.4.21 | 杂志   | 『Myojo』2022年6月号  | [微博](https://weibo.com/5177703789/LpwCfhnHM) | |
-| 2022.4.23 | 音乐   | NHK新音楽番組『Venue101』MC 23:00~ 嘉宾: SKYHI『BareBare』 羊文学『光るとき』 LuckyKilimanjaro『週休8日』 |  [生](https://www.bilibili.com/video/BV1LY4y1Y77K)  |                        |
+| 2022.4.23 | 音乐   | NHK新音楽番組『Venue101』MC 23:00~ 嘉宾: SKY-HI『Bare-Bare』 羊文学『光るとき』 Lucky Kilimanjaro『週休8日』 |  [生](https://www.bilibili.com/video/BV1LY4y1Y77K)  |                        |
 | 2022.4.27 | 杂志   | 『TV LIFE』2022年9号  | [微博](https://weibo.com/5177703789/LqlX0mARu) | |
-| 2022.4.30 | 音乐   | NHK新音楽番組『Venue101』MC 23:00~ 嘉宾: 大橋ちっぽけ『嫌でもね』 BiSH『ごめんね』 ファーストサマーウイカ『OpentheDoor』 |    |                  |
+| 2022.4.30 | 音乐   | NHK新音楽番組『Venue101』MC 23:00~ 嘉宾: 大橋ちっぽけ『嫌でもね』 BiSH『ごめんね』 ファーストサマーウイカ『Open the Door』 |   [生](https://www.bilibili.com/video/BV1EY4y1k7Zn) |                  |
 | 2022.5.7  | 音乐剧 | 『四月は君の嘘』東京・日生劇場(~5.29)                        |                                                              |                                                              |
 | 2022.5.8  | 电影 | 『行骗天下JP 英雄篇』 Blu-ray＆DVD発売   |                             |   [主页](https://movie-product.ponycanyon.co.jp/item132/)                        |
 | 2022.5.8  | 电视剧 |『金田一少年の事件簿』第2話「聖恋島殺人事件」22:30        |               |      [主页](https://www.ntv.co.jp/kindaichi2022/story/)    |                                     
+| 2022.5.14 | 音乐   | NHK新音楽番組『Venue101』MC 23:00~ 嘉宾: TREASURE『JIKJIN』 BEFIRST『Bye Good Bye』 LUCKYTAPES『ナイトダイバー』 |    |                        |
 | 2022.5.15  | 电视剧 |『金田一少年の事件簿』第3話「聖恋島殺人事件」22:30                       |          |      |
 | 2022.5.20 | 杂志   | 『東京カレンダー』2022年7月号  |  | |
 | 2022.6.4  | 音乐剧 | 『四月は君の嘘』群馬・高崎芸術劇場(~6.5)                     |                                                              |                                                              |
