--- a/year/2022.md
+++ b/year/2022.md
@@ -49,7 +49,7 @@
 | 2022.2.2  | 番组   | 告诉我坂道老师！毕业·生田绘梨花编@日刊体育                   | [生](https://www.bilibili.com/video/bv1e44y1n7rZ) ‖ [油管](https://www.youtube.com/watch?v=54yKhV1tY8U) |                                                              |
 | 2022.2.8  | 番组   | 『ザ！世界仰天ニュース』 让人惊愕的新闻 生田绘梨花cut        |      [熟](https://www.bilibili.com/video/BV1FT4y1979p)       |                                                              |
 | 2022.2.10 | 杂志   | CM NOW 2022年3月号                                           | [网盘](https://pan.baidu.com/s/14-qIxIk9-wNLtL6KcHPsqw?pwd=0122) |                                                              |
-| 2022.2.10 | CM     | Apuweiser-riche品牌形象代言人就任                            | [网盘](https://pan.baidu.com/s/1hzWB_5Wj_coGXGfWF5qEKQ?pwd=0122) | [Apuweiser-riche官网](https://ap-story.jp/cts/apuweiser-riche/220210_apu_catalog.html) |
+| 2022.2.10 | CM     | Apuweiser-riche品牌形象代言人就任(Spring)                            | [网盘](https://pan.baidu.com/s/1hzWB_5Wj_coGXGfWF5qEKQ?pwd=0122) | [Apuweiser-riche官网](https://ap-story.jp/cts/apuweiser-riche/220210_apu_catalog.html) |
 | 2022.2.12 | 乃木坂 | 乃木坂46 生田绘梨花毕业演唱会（for J-LODlive）               | [生](https://www.bilibili.com/video/BV1du411975e) ‖ [油管](https://www.youtube.com/watch?v=zMUkljR9Z1U) |                                                              |
 | 2022.2.18 | 音乐   | SHIONOGI music fair2900回纪念演唱会                          |                                                              |                                                              |
 | 2022.2.18 | 电影   | 『行骗天下JP 英雄篇』making                                  | [生](https://www.bilibili.com/video/BV1JY41157Vn) ‖ [油管](https://www.youtube.com/watch?v=mrW5n5Ent9U) |                                                              |
@@ -92,6 +92,7 @@
 | 2022.4.23 | 音乐   | NHK新音楽番組『Venue101』MC 23:00~ 嘉宾: SKY-HI『Bare-Bare』 羊文学『光るとき』 Lucky Kilimanjaro『週休8日』 |  [生](https://www.bilibili.com/video/BV1LY4y1Y77K)  |                        |
 | 2022.4.27 | 杂志   | 『TV LIFE』2022年9号  | [微博](https://weibo.com/5177703789/LqlX0mARu) | |
 | 2022.4.30 | 音乐   | NHK新音楽番組『Venue101』MC 23:00~ 嘉宾: 大橋ちっぽけ『嫌でもね』 BiSH『ごめんね』 ファーストサマーウイカ『Open the Door』 |   [生](https://www.bilibili.com/video/BV1EY4y1k7Zn) |                  |
+| 2022.5.4 | CM     | Apuweiser-riche Summer发表                            | [网盘](https://pan.baidu.com/s/1K-c6BuMOZXFBG96_Tfl7mQ?pwd=0122) | [Apuweiser-riche官网](https://ap-story.jp/cts/apuweiser-riche/220504_apu_catalog.html) |
 | 2022.5.7  | 音乐剧 | 『四月は君の嘘』東京・日生劇場(~5.29)                        |                                                              |                                                              |
 | 2022.5.8  | 电影 | 『行骗天下JP 英雄篇』 Blu-ray＆DVD発売   |                             |   [主页](https://movie-product.ponycanyon.co.jp/item132/)                        |
 | 2022.5.8  | 电视剧 |『金田一少年の事件簿』第2話「聖恋島殺人事件」22:30        |               |      [主页](https://www.ntv.co.jp/kindaichi2022/story/)    |                                     
