--- a/year/2022.md
+++ b/year/2022.md
@@ -89,9 +89,9 @@
 | 2022.4.19  | 杂志 | 『BARFOUT!』 バァフアウト! 2022年5月号  Volume 320          | [微博](https://weibo.com/5177703789/LpjxhyJYn)  |   [amazon](https://www.amazon.co.jp/dp/4344954238/ref=sr_1_1?__mk_ja_JP=%E3%82%AB%E3%82%BF%E3%82%AB%E3%83%8A&crid=3OPN98NSHVP28&keywords=barfout%21+%E3%83%90%E3%82%A1%E3%83%95%E3%82%A2%E3%82%A6%E3%83%88%21+2022%E5%B9%B4+5%E6%9C%88%E5%8F%B7&qid=1646747612&sprefix=barfout+%E3%83%90%E3%82%A1%E3%83%95%E3%82%A2%E3%82%A6%E3%83%88+2022%E5%B9%B45%E6%9C%88%E5%8F%B7%2Caps%2C226&sr=8-1)    |       
 | 2022.4.21 | 杂志   | 『MAQUIA(マキア)』2022年6月号  | [微博](https://weibo.com/5177703789/Lpn4c5dmq) | [试读](https://weibo.com/5177703789/Lpig79Ps9)|
 | 2022.4.21 | 杂志   | 『Myojo』2022年6月号  | [微博](https://weibo.com/5177703789/LpwCfhnHM) | |
-| 2022.4.23 | 音乐   | NHK新音楽番組『Venue101』MC 23:00~ 嘉宾: SKY-HI『Bare-Bare』 羊文学『光るとき』 Lucky Kilimanjaro『週休8日』 |  [生](https://www.bilibili.com/video/BV1LY4y1Y77K)  |                        |
+| 2022.4.23 | 音乐   | NHK新音楽番組『Venue101』MC 23:00~ 嘉宾: SKY-HI『Bare-Bare』 羊文学『光るとき』 Lucky Kilimanjaro『週休8日』 |  [熟](https://www.bilibili.com/video/BV1PF411M7Ht)  |                        |
 | 2022.4.27 | 杂志   | 『TV LIFE』2022年9号  | [微博](https://weibo.com/5177703789/LqlX0mARu) | |
-| 2022.4.30 | 音乐   | NHK新音楽番組『Venue101』MC 23:00~ 嘉宾: 大橋ちっぽけ『嫌でもね』 BiSH『ごめんね』 ファーストサマーウイカ『Open the Door』 |   [生](https://www.bilibili.com/video/BV1EY4y1k7Zn) |                  |
+| 2022.4.30 | 音乐   | NHK新音楽番組『Venue101』MC 23:00~ 嘉宾: 大橋ちっぽけ『嫌でもね』 BiSH『ごめんね』 ファーストサマーウイカ『Open the Door』 |   [熟](https://www.bilibili.com/video/BV1mT4y1z75q) |                  |
 | 2022.5.4 | CM     | Apuweiser-riche Summer发表                            | [网盘](https://pan.baidu.com/s/1K-c6BuMOZXFBG96_Tfl7mQ?pwd=0122) | [Apuweiser-riche官网](https://ap-story.jp/cts/apuweiser-riche/220504_apu_catalog.html) |
 | 2022.5.7  | 音乐剧 | 『四月は君の嘘』東京・日生劇場(~5.29)                        |                                                              |                                                              |
 | 2022.5.8  | 电影 | 『行骗天下JP 英雄篇』 Blu-ray＆DVD発売   |                             |   [主页](https://movie-product.ponycanyon.co.jp/item132/)                        |
