--- a/year/2022.md
+++ b/year/2022.md
@@ -93,8 +93,10 @@
 | 2022.4.27 | 杂志   | 『TV LIFE』2022年9号  | [微博](https://weibo.com/5177703789/LqlX0mARu) | |
 | 2022.4.30 | 音乐   | NHK新音楽番組『Venue101』MC 23:00~ 嘉宾: 大橋ちっぽけ『嫌でもね』 BiSH『ごめんね』 ファーストサマーウイカ『Open the Door』 |   [熟](https://www.bilibili.com/video/BV1mT4y1z75q) |                  |
 | 2022.5.4 | CM     | Apuweiser-riche Summer发表                            | [网盘](https://pan.baidu.com/s/1K-c6BuMOZXFBG96_Tfl7mQ?pwd=0122) | [Apuweiser-riche官网](https://ap-story.jp/cts/apuweiser-riche/220504_apu_catalog.html) |
-| 2022.5.7  | 音乐剧 | 『四月は君の嘘』東京・日生劇場(~5.29)                        |                                                              |                         [图包](https://pan.baidu.com/s/1YlPwnXCI2N-aPEkX_PLRng?pwd=d3mn)                                     |
-| 2022.5.8  | 电视剧 |『金田一少年の事件簿』第2話「聖恋島殺人事件」22:30        |               |      [主页](https://www.ntv.co.jp/kindaichi2022/story/)    |                                     
+| 2022.5.7  | 音乐剧 | 『四月は君の嘘』東京・日生劇場(~5.29)                        |                                                              |                         [新闻图包](https://pan.baidu.com/s/1YlPwnXCI2N-aPEkX_PLRng?pwd=d3mn)                                     |
+| 2022.5.8  | 电视剧 |『金田一少年の事件簿』第2話「聖恋島殺人事件」22:30        |   [cut](https://www.bilibili.com/video/BV14r4y1t79V)            |      [主页](https://www.ntv.co.jp/kindaichi2022/story/)    |                                     
+| 2022.5.9 | 新闻   | 闹钟TV-『四月は君の嘘』                                              |      [熟](https://www.bilibili.com/video/BV1tU4y1S72m)       |   
+| 2022.5.9 | 新闻   | NONSTOP-『四月は君の嘘』                                              |      [熟](https://www.bilibili.com/video/BV1UT4y167ss)       |   
 | 2022.5.14 | 音乐   | NHK新音楽番組『Venue101』MC 23:00~ 嘉宾: TREASURE『JIKJIN』 BEFIRST『Bye Good Bye』 LUCKYTAPES『ナイトダイバー』 |    |                        |
 | 2022.5.15  | 电视剧 |『金田一少年の事件簿』第3話「聖恋島殺人事件」22:30                       |          |      |
 | 2022.5.18  | 电影 | 『行骗天下JP 英雄篇』 Blu-ray＆DVD発売   |                             |   [主页](https://movie-product.ponycanyon.co.jp/item132/)                        |
