--- a/theme/音乐剧&舞台剧汇总.md
+++ b/theme/音乐剧&舞台剧汇总.md
@@ -427,6 +427,9 @@
 - 概念专辑制作生田绘梨花making
   - https://www.bilibili.com/video/BV1wK411g71t
   - https://www.bilibili.com/video/BV1yV411n7pL
+- 晨间新闻
+  - 20220509闹钟TV: https://www.bilibili.com/video/BV1tU4y1S72m
+  - 20220509NONSTOP: https://www.bilibili.com/video/BV1UT4y167ss/
 
 **评论感想**
 
