--- a/theme/电影&电视剧汇总.md
+++ b/theme/电影&电视剧汇总.md
@@ -38,6 +38,7 @@
 | **2020.2.12** フジテレビ        | **乃木坂シネマズ〜STORY of 46**〜 [第8話『ツダモモエ』](https://github.com/ikuchanfans/wiki/blob/main/theme/电影%26电视剧汇总.md#10-乃木坂シネマズstory-of-46-第8話ツダモモエ) | **乃木坂46集体出演**  |
 | **2021.5.3** フジテレビ         | 『**イチケイのカラス**』[一刑的乌鸦](https://github.com/ikuchanfans/wiki/blob/main/theme/电影%26电视剧汇总.md#11-イチケイのカラス一刑的乌鸦) | **馬場恭子** 马场恭子 |
 | **2022.3.10** フジテレビ        | 『**ゴシップ #彼女が知りたい本当の○○**』[Gossip 她想知道的真正的○○](https://github.com/ikuchanfans/wiki/blob/main/theme/电影%26电视剧汇总.md#12ゴシップ-彼女が知りたい本当のgossip-她想知道的真正的) | **向井未央**          |
+| **2022.5.8** 日本テレビ        | 『金田一少年の事件簿』[金田一少年の事件簿](https://github.com/ikuchanfans/wiki/blob/main/theme/电影%26电视剧汇总.md#13金田一少年の事件簿) | **右竜あかね**          |
 
 ### 流媒
 
@@ -472,6 +473,23 @@
   - 简介: 本作是女演员黑木华(31)作为主演，以网络新闻网站「カンフルNEWS」编辑部为舞台，描写新时代人与人之间的羁绊的故事。生田饰演了一名在找工作中遇到了偶然发生的事情，并在发出控诉的21岁女大学生，向井未央。对编辑部来说是最后的事件，是很重要的关键角色。穿着求职西装的剧照也公开。富士电视台编写企划的渡边恒也也称赞她说“展现了稳重坚韧，很棒的表演”。
   - 生田绘梨花cut 第10集: https://weibo.com/5177703789/Lj8m96nvS
   - 生田绘梨花cut 第11集: https://www.bilibili.com/video/BV1T34y1t7b2/  
+
+
+## 13.『金田一少年の事件簿』
+
+**播出时间 & 制作公司**
+
+  - 第2話 - 第3話（2022年5月8日 - 15日〈予定〉、日本テレビ）
+  
+**角色**
+
+  - 右竜あかね 役
+
+**物料&简要说明**
+  - 简介: 该剧改编自天树征丸、金成阳三郎担任原作，佐藤文也负责作画的同名漫画，讲述了天才高中生侦探金田一一与他的青梅竹马以及警视厅的警部一起解决各种案件的故事。『聖恋島殺人事件』中出演「アスタニッシュ出版」的记者, 调查圣恋岛的秘密
+  - 本篇第2話cut: https://www.bilibili.com/video/BV14r4y1t79V
+  - 本篇第2話全: http://www.mytvbt.net/viewthread.php?tid=106256
+
 
 
 ---------------------------------------------------------------------
