--- a/theme/电影&电视剧汇总.md
+++ b/theme/电影&电视剧汇总.md
@@ -38,7 +38,7 @@
 | **2020.2.12** フジテレビ        | **乃木坂シネマズ〜STORY of 46**〜 [第8話『ツダモモエ』](https://github.com/ikuchanfans/wiki/blob/main/theme/电影%26电视剧汇总.md#10-乃木坂シネマズstory-of-46-第8話ツダモモエ) | **乃木坂46集体出演**  |
 | **2021.5.3** フジテレビ         | 『**イチケイのカラス**』[一刑的乌鸦](https://github.com/ikuchanfans/wiki/blob/main/theme/电影%26电视剧汇总.md#11-イチケイのカラス一刑的乌鸦) | **馬場恭子** 马场恭子 |
 | **2022.3.10** フジテレビ        | 『**ゴシップ #彼女が知りたい本当の○○**』[Gossip 她想知道的真正的○○](https://github.com/ikuchanfans/wiki/blob/main/theme/电影%26电视剧汇总.md#12ゴシップ-彼女が知りたい本当のgossip-她想知道的真正的) | **向井未央**          |
-| **2022.5.8** 日本テレビ        | 『金田一少年の事件簿』[金田一少年の事件簿](https://github.com/ikuchanfans/wiki/blob/main/theme/电影%26电视剧汇总.md#13金田一少年の事件簿) | **右竜あかね**          |
+| **2022.5.8** 日本テレビ        | 『**金田一少年の事件簿**』[金田一少年の事件簿](https://github.com/ikuchanfans/wiki/blob/main/theme/%E7%94%B5%E5%BD%B1%26%E7%94%B5%E8%A7%86%E5%89%A7%E6%B1%87%E6%80%BB.md#13%E9%87%91%E7%94%B0%E4%B8%80%E5%B0%91%E5%B9%B4%E3%81%AE%E4%BA%8B%E4%BB%B6%E7%B0%BF) | **右竜あかね**          |
 
 ### 流媒
 
