--- a/year/2022.md
+++ b/year/2022.md
@@ -113,4 +113,4 @@
 | 2022.7.1  | 音乐剧 | 『四月は君の嘘』福岡・博多座(~7.1)                           |                                                              |                                                              |
 | 2022.7.2 | 音乐 | 『Venue101EXTRA』NHK大阪ホール放送#2             |                                                              |                                                              |
 | 2022.7.6  | 电影 | 『行骗天下JP 英雄篇』 超豪華版発売                      |                   |   [主页](https://movie-product.ponycanyon.co.jp/item132/)           |
-| 2022.9.~ | 音乐 | 『Venue101EXTRA』東京公開収録             |                                                              |                                                              |
+| 2022.9.24 | 音乐 | 『Venue101EXTRA』東京NHKホール公開収録             |                                                              |                                                              |
