--- a/year/2022.md
+++ b/year/2022.md
@@ -100,6 +100,7 @@
 | 2022.5.13 | CM   |  『e.design事故保险』新CM 「このゆび、とまれっ！」  |      [CM](https://weibo.com/5177703789/LsIHjAiE0) ‖[ABEMA](https://www.bilibili.com/video/BV1jZ4y187sQ)      | [采访](https://www.bilibili.com/video/BV1XY4y147tC)  | 
 | 2022.5.13 | 新闻   | 闹钟TV-『e.design事故保险』              |            |   
 | 2022.5.13 | 新闻   | ZIP!『e.design事故保险』            |     [熟](https://www.bilibili.com/video/BV1Kr4y1b7qR)       |   
+| 2022.5.14 |	音乐	|『映画音楽はすばらしい！Ⅳ』21:00重播 BS4K | | |
 | 2022.5.14 | 音乐   | NHK新音楽番組『Venue101』MC 23:00~ 嘉宾: TREASURE『JIKJIN』 BEFIRST『Bye Good Bye』 LUCKYTAPES『ナイトダイバー』 |    |                        |
 | 2022.5.15  | 电视剧 |『金田一少年の事件簿』第3話「聖恋島殺人事件」22:30                       |          |      |
 | 2022.5.18  | 电影 | 『行骗天下JP 英雄篇』 Blu-ray＆DVD発売   |                             |   [主页](https://movie-product.ponycanyon.co.jp/item132/)                        |
