--- a/year/2022.md
+++ b/year/2022.md
@@ -101,10 +101,11 @@
 | 2022.5.13 | 新闻   | 闹钟TV-『e.design事故保险』              |            |   
 | 2022.5.13 | 新闻   | ZIP!『e.design事故保险』            |     [熟](https://www.bilibili.com/video/BV1Kr4y1b7qR)       |   
 | 2022.5.14 |	音乐	|『映画音楽はすばらしい！Ⅳ』21:00重播 BS4K | | |
-| 2022.5.14 | 音乐   | NHK新音楽番組『Venue101』MC 23:00~ 嘉宾: TREASURE『JIKJIN』 BEFIRST『Bye Good Bye』 LUCKYTAPES『ナイトダイバー』 |    |                        |
+| 2022.5.14 | 音乐   | NHK新音楽番組『Venue101』MC 23:00~ 嘉宾:  BE:FIRST『Bye-Good-Bye』 LUCKY TAPES『ナイトダイバー』 TREASURE『JIKJIN』  | [生](https://www.bilibili.com/video/BV113411N7BU)   |                        |
 | 2022.5.15  | 电视剧 |『金田一少年の事件簿』第3話「聖恋島殺人事件」22:30                       |          |      |
 | 2022.5.18  | 电影 | 『行骗天下JP 英雄篇』 Blu-ray＆DVD発売   |                             |   [主页](https://movie-product.ponycanyon.co.jp/item132/)                        |
 | 2022.5.20 | 杂志   | 『東京カレンダー』2022年7月号  |  | |
+| 2022.5.21 | 音乐   | NHK新音楽番組『Venue101』MC 23:00~ 嘉宾:  JO1『WithUs』 Penthouse『流星群』 緑黄色社会『陽はまた昇るから』  |    |                        |
 | 2022.6.4  | 音乐剧 | 『四月は君の嘘』群馬・高崎芸術劇場(~6.5)                     |                                                              |                                                              |
 | 2022.6.10 | 音乐剧 | 『四月は君の嘘』愛知・御園座(~6.12)                          |                                                              |                                                              |
 | 2022.6.16 | 音乐剧 | 『四月は君の嘘』兵庫県立芸術文化センター(~6.18)              |                                                              |                                                              |
