--- a/year/2022.md
+++ b/year/2022.md
@@ -97,6 +97,7 @@
 | 2022.5.8  | 电视剧 |『金田一少年の事件簿』第2話「聖恋島殺人事件」22:30        |   [cut](https://www.bilibili.com/video/BV14r4y1t79V)            |      [主页](https://www.ntv.co.jp/kindaichi2022/story/)    |                                     
 | 2022.5.9 | 新闻   | 闹钟TV-『四月は君の嘘』                                              |      [熟](https://www.bilibili.com/video/BV1tU4y1S72m)       |   
 | 2022.5.9 | 新闻   | NONSTOP-『四月は君の嘘』                                              |      [熟](https://www.bilibili.com/video/BV1UT4y167ss)       |   
+| 2022.5.11 | 杂志   | 『TV Station』2022年10号  | [微博](https://weibo.com/5177703789/LuZmmyh3J) | |
 | 2022.5.13 | CM   |  『e.design事故保险』新CM 「このゆび、とまれっ！」  |      [CM](https://weibo.com/5177703789/LsIHjAiE0) ‖[ABEMA](https://www.bilibili.com/video/BV1jZ4y187sQ)      | [采访](https://www.bilibili.com/video/BV1XY4y147tC)  | 
 | 2022.5.13 | 新闻   | 闹钟TV-『e.design事故保险』              |  [网盘](https://pan.baidu.com/s/1-1DTkgXkHiR9ppsutUWaOQ?pwd=0122)          |   
 | 2022.5.13 | 新闻   | ZIP!『e.design事故保险』            |     [熟](https://www.bilibili.com/video/BV1Kr4y1b7qR)       |   
