--- a/year/2022.md
+++ b/year/2022.md
@@ -110,6 +110,8 @@
 | 2022.5.20 | 杂志   | 『東京カレンダー』2022年7月号  | [微博](https://weibo.com/5177703789/LtMsbxmg2) | [花絮](https://weibo.com/tv/show/1034:4771974988365836) ‖[采访](https://weibo.com/ttarticle/p/show?id=2309404773850767557543)|
 | 2022.5.21 | 音乐   | NHK新音楽番組『Venue101』MC 23:00~ 嘉宾:  JO1『WithUs』 Penthouse『流星群』 緑黄色社会『陽はまた昇るから』  | [生](https://www.bilibili.com/video/BV1zS4y1z755)   |                        |
 | 2022.5.28 | 音乐   | NHK新音楽番組『Venue101』MC 23:00~ 嘉宾:  日向坂46『僕なんか』TOMORROW_X_TOGETHER『GOOD_BOY_GONE_BAD』GENERATIONS from EXILE TRIBE『新しい世界』  |  |                        |
+| 2022.5.30 | 新闻   | THE TIME - 写真集半年榜 生田绘梨花cut           |   [熟](https://weibo.com/tv/show/1034:4775244293144622)         |  
+| 2022.5.31 | 杂志   | 『周刊FLASH』2022年6月14日号  | [微博](https://weibo.com/5177703789/LvyY3eh62) | [彩图](https://smart-flash.jp/showbiz/184315)|
 | 2022.6.4  | 音乐剧 | 『四月は君の嘘』群馬・高崎芸術劇場(~6.5)                     |                                                              |                                                              |
 | 2022.6.10 | 音乐剧 | 『四月は君の嘘』愛知・御園座(~6.12)                          |                                                              |                                                              |
 | 2022.6.16 | 音乐剧 | 『四月は君の嘘』兵庫県立芸術文化センター(~6.18)              |                                                              |                                                              |
