--- a/year/2022.md
+++ b/year/2022.md
@@ -103,7 +103,7 @@
 | 2022.5.13 | 新闻   | ZIP!『e.design事故保险』            |     [熟](https://www.bilibili.com/video/BV1Kr4y1b7qR)       |   
 | 2022.5.14 | 新闻   | 闹钟TV-『四月は君の嘘』              |   [生](https://www.bilibili.com/video/BV1uY411w7Pf)         |   
 | 2022.5.14 |	音乐	|『映画音楽はすばらしい！Ⅳ』21:00重播 BS4K | | |
-| 2022.5.14 | 音乐   | NHK新音楽番組『Venue101』MC 23:00~ 嘉宾:  BE:FIRST『Bye-Good-Bye』 LUCKY TAPES『ナイトダイバー』 TREASURE『JIKJIN』  | [生](https://www.bilibili.com/video/BV113411N7BU)   |                        |
+| 2022.5.14 | 音乐   | NHK新音楽番組『Venue101』MC 23:00~ 嘉宾:  BE:FIRST『Bye-Good-Bye』 LUCKY TAPES『ナイトダイバー』 TREASURE『JIKJIN』  | [熟](https://www.bilibili.com/video/BV1sa41177GX)   |                        |
 | 2022.5.15  | 乃木坂 | 乃木坂46 十周年演唱会                       |  [微博](https://weibo.com/tv/show/1034:4769683459735651)        |      |
 | 2022.5.15  | 电视剧 |『金田一少年の事件簿』第3話「聖恋島殺人事件」22:30                       |  [熟](http://www.mytvbt.net/viewthread.php?tid=106256)        |      |
 | 2022.5.18  | 电影 | 『行骗天下JP 英雄篇』 Blu-ray＆DVD発売   |  [网盘](https://pan.baidu.com/s/1L-tlb9J5QTN8FwLg2duhkg?pwd=wwbb)  |   [主页](https://movie-product.ponycanyon.co.jp/item132/)                        |
