--- a/year/2022.md
+++ b/year/2022.md
@@ -113,9 +113,11 @@
 | 2022.5.30 | 新闻   | THE TIME - 写真集半年榜 生田绘梨花cut           |   [熟](https://weibo.com/tv/show/1034:4775244293144622)         |  
 | 2022.5.31 | 杂志   | 『周刊FLASH』2022年6月14日号  | [微博](https://weibo.com/5177703789/LvyY3eh62) | [彩图](https://smart-flash.jp/showbiz/184315)|
 | 2022.6.4  | 音乐剧 | 『四月は君の嘘』群馬・高崎芸術劇場(~6.5)                     |                                                              |                                                              |
+| 2022.6.4 | 音乐   | NHK新音楽番組『Venue101』MC 23:00~ 嘉宾:  新東京『Cynical City』Sexy Zone『Forever Gold』milet『Walkin' In My Lane』モーニング娘。'22『Chu Chu Chu 僕らの未来』  |  |                        |
 | 2022.6.5  | 番组 | 『乃木坂工事中』10周年 Birthday Live 潜入                    | [熟](https://www.bilibili.com/video/BV1Lt4y1H7cz)                                                             |                                                              |
 | 2022.6.8 | 新闻   | THE TIME - 出演『OLD ROOKIE』 生田绘梨花cut           |   [熟](https://weibo.com/tv/show/1034:4778102640017506)         | [新闻](https://weibo.com/5177703789/LwHobaq0q)  ‖ [留言](https://weibo.com/5177703789/LwLNqjnjY)      |  
 | 2022.6.10 | 音乐剧 | 『四月は君の嘘』愛知・御園座(~6.12)                          |                                                              |                                                              |
+| 2022.6.11 | 音乐   | NHK新音楽番組『Venue101』MC 23:00~ 嘉宾:  ［Alexandros］『無心拍数』NCT DREAM『Beatbox』Stray Kids『MANIAC -Japanese ver.-』SEVENTEEN『HOT』  |  |                        |
 | 2022.6.16 | 音乐剧 | 『四月は君の嘘』兵庫県立芸術文化センター(~6.18)              |                                                              |                                                              |
 | 2022.6.18 | 音乐 | 『Venue101EXTRA』NHK大阪ホール公開収録             |                                                              |                                                              |
 | 2022.6.18 | 电视剧 | 『世にも奇妙な物語'22 夏の特別編』『メロディに乗せて』夜9時〜             |                                                              |                                                              |
