--- a/year/2022.md
+++ b/year/2022.md
@@ -124,9 +124,10 @@
 | 2022.6.22 | 杂志 | 『VOCE（ヴォーチェ）』2022年8月号             |                                                              |                                                              |
 | 2022.6.25 | 音乐剧 | 『四月は君の嘘』富山・オーバードホール(~6.26)                |                                                              |                                                              |
 | 2022.6.25 | 音乐 | 『Venue101EXTRA』NHK大阪ホール放送#1             |                                                              |                                                              |
-| 2022.6.26 | 番组 | 『バナナマンのせっかくグルメ』3時間SP             |                                                              |                                                              |
+| 2022.6.26 | 番组 | 『バナナマンのせっかくグルメ』3時間SP 6:00            |                                                              |                                                              |
+| 2022.6.26 | 电视剧 | 『OLD ROOKIE』21:00~             |                                                              |                                                              |
 | 2022.7.1  | 音乐剧 | 『四月は君の嘘』福岡・博多座(~7.1)                           |                                                              |                                                              |
 | 2022.7.2 | 音乐 | 『Venue101EXTRA』NHK大阪ホール放送#2             |                                                              |                                                              |
 | 2022.7.6  | 电影 | 『行骗天下JP 英雄篇』 超豪華版発売                      |                   |   [主页](https://movie-product.ponycanyon.co.jp/item132/)           |
-| 2022.7 | 电视剧 | 『OLD ROOKIE』             |                                                              |                                                              |
+
 | 2022.9.24 | 音乐 | 『Venue101EXTRA』東京NHKホール公開収録             |                                                              |                                                              |
