--- a/year/2022.md
+++ b/year/2022.md
@@ -120,7 +120,7 @@
 | 2022.6.11 | 音乐   | NHK新音楽番組『Venue101』MC 23:00~ 嘉宾:  ［Alexandros］『無心拍数』NCT DREAM『Beatbox』Stray Kids『MANIAC -Japanese ver.-』SEVENTEEN『HOT』  |  |                        |
 | 2022.6.16 | 音乐剧 | 『四月は君の嘘』兵庫県立芸術文化センター(~6.18)              |                                                              |                                                              |
 | 2022.6.18 | 音乐 | 『Venue101EXTRA』NHK大阪ホール公開収録 19:00~20:45            |                                                              |                                                              |
-| 2022.6.18 | 电视剧 | 『世にも奇妙な物語'22 夏の特別編』『メロディに乗せて』夜9時〜             |                                                              |                                                              |
+| 2022.6.18 | 电视剧 | 『世にも奇妙な物語'22 夏の特別編』『メロディに乗せて』夜9時〜             |    [熟](http://www.mytvbt.net/viewthread.php?tid=106236&extra=page%3D1)                                                          |                                                              |
 | 2022.6.22 | 杂志 | 『VOCE（ヴォーチェ）』2022年8月号             |                                                              |                                                              |
 | 2022.6.25 | 音乐剧 | 『四月は君の嘘』富山・オーバードホール(~6.26)                |                                                              |                                                              |
 | 2022.6.25 | 音乐 | 『Venue101EXTRA』NHK大阪ホール放送#1             |                                                              |                                                              |
