--- a/theme/电影&电视剧汇总.md
+++ b/theme/电影&电视剧汇总.md
@@ -490,6 +490,35 @@
   - 本篇第2話cut: https://www.bilibili.com/video/BV14r4y1t79V
   - 本篇全: http://www.mytvbt.net/viewthread.php?tid=106256
 
+## 14.世にも奇妙な物語 2022年 夏の特別編『メロディに乗せて』
+
+**播出时间 & 制作公司**
+
+ - （2022年6月18日、フジテレビ）
+
+**角色**
+
+ - 主演・村野叶海 役
+
+**物料&简要说明**
+
+  - 简介: 『紧跟旋律』嘹亮轻快的音乐。这是叶海(生田絵梨花)脑中回响的音乐♬医生告诉她如果做出音乐的曲调和相反的行动她就会死。叶海应对了各种各样的音乐，结果响起了她没有预想到的音乐…
+  - 本篇: http://www.mytvbt.net/viewthread.php?tid=106236
+
+
+## 15.『オールドルーキー』OLD ROOKIE
+
+**播出时间 & 制作公司**
+
+ - （2022年6月26日〈予定〉 - 、TBS）
+
+**角色**
+
+ - 糸山留美 役
+
+**物料&简要说明**
+ - 简介: 这部作品是由主演绫野刚(40岁)饰演的将一生奉献给足球的前职业球员新町亮太郎，从37岁开始作为体育经理新人奋斗的人性电视剧。生田饰演亮太郎的妻子里奈子(荣仓奈奈)的妹妹，美食作家糸山留美。是有着“享受人生的人胜利!”座右铭的自由人，对里奈子来说是很好的商量对象，也是给亮太郎出谋划策值得信赖的女性。
+
 
 
 ---------------------------------------------------------------------
