--- a/theme/电影&电视剧汇总.md
+++ b/theme/电影&电视剧汇总.md
@@ -39,6 +39,10 @@
 | **2021.5.3** フジテレビ         | 『**イチケイのカラス**』[一刑的乌鸦](https://github.com/ikuchanfans/wiki/blob/main/theme/电影%26电视剧汇总.md#11-イチケイのカラス一刑的乌鸦) | **馬場恭子** 马场恭子 |
 | **2022.3.10** フジテレビ        | 『**ゴシップ #彼女が知りたい本当の○○**』[Gossip 她想知道的真正的○○](https://github.com/ikuchanfans/wiki/blob/main/theme/电影%26电视剧汇总.md#12ゴシップ-彼女が知りたい本当のgossip-她想知道的真正的) | **向井未央**          |
 | **2022.5.8** 日本テレビ        | 『**金田一少年の事件簿**』[金田一少年の事件簿](https://github.com/ikuchanfans/wiki/blob/main/theme/%E7%94%B5%E5%BD%B1%26%E7%94%B5%E8%A7%86%E5%89%A7%E6%B1%87%E6%80%BB.md#13%E9%87%91%E7%94%B0%E4%B8%80%E5%B0%91%E5%B9%B4%E3%81%AE%E4%BA%8B%E4%BB%B6%E7%B0%BF) | **右竜あかね**          |
+| **2022.6.18** フジテレビ        | 『**世にも奇妙な物語 2022年 夏の特別編「メロディに乗せて」**』[紧跟旋律](https://github.com/ikuchanfans/wiki/blob/main/theme/%E7%94%B5%E5%BD%B1%26%E7%94%B5%E8%A7%86%E5%89%A7%E6%B1%87%E6%80%BB.md#14%E4%B8%96%E3%81%AB%E3%82%82%E5%A5%87%E5%A6%99%E3%81%AA%E7%89%A9%E8%AA%9E-2022%E5%B9%B4-%E5%A4%8F%E3%81%AE%E7%89%B9%E5%88%A5%E7%B7%A8%E3%83%A1%E3%83%AD%E3%83%87%E3%82%A3%E3%81%AB%E4%B9%97%E3%81%9B%E3%81%A6) | **村野叶海**          |
+| **2022.6.26** TBS        | 『**オールドルーキー**』[OLD ROOKIE](https://github.com/ikuchanfans/wiki/blob/main/theme/%E7%94%B5%E5%BD%B1%26%E7%94%B5%E8%A7%86%E5%89%A7%E6%B1%87%E6%80%BB.md#15%E3%82%AA%E3%83%BC%E3%83%AB%E3%83%89%E3%83%AB%E3%83%BC%E3%82%AD%E3%83%BCold-rookie) | **糸山留美**          |
+
+
 
 ### 流媒
 
