--- a/year/2022.md
+++ b/year/2022.md
@@ -130,3 +130,8 @@
 | 2022.7.2 | 音乐 | 『Venue101EXTRA』NHK大阪ホール放送#2             |                                                              |                                                              |
 | 2022.7.6  | 电影 | 『行骗天下JP 英雄篇』 超豪華版発売                      |                   |   [主页](https://movie-product.ponycanyon.co.jp/item132/)           |
 | 2022.9.24 | 音乐 | 『Venue101EXTRA』東京NHKホール公開収録             |                                                              |                                                              |
+
+
+## 待定
+ - 『Dr.コトー』劇場版: 人气漫画《五岛医生诊疗所》讲述了一位医生在离岛进行诊疗的故事. 6.13在外景地与那国岛参加了拍摄
+ - 『MEAN GIRLS』音乐剧主演: 2023年1～2月東京建物Brillia HALL　ほか、地方公演あり
