--- a/year/2022.md
+++ b/year/2022.md
@@ -121,7 +121,8 @@
 | 2022.6.16 | 音乐剧 | 『四月は君の嘘』兵庫県立芸術文化センター(~6.18)              |                                                              |                                                              |
 | 2022.6.18 | 音乐 | 『Venue101EXTRA』NHK大阪ホール公開収録 19:00~20:45            |                                                              |                                                              |
 | 2022.6.18 | 电视剧 | 『世にも奇妙な物語'22 夏の特別編』『メロディに乗せて』夜9時〜             |    [熟](http://www.mytvbt.net/viewthread.php?tid=106236&extra=page%3D1)                                                          |                                                              |
-| 2022.6.22 | 杂志 | 『VOCE（ヴォーチェ）』2022年8月号             |                                                              |                                                              |
+| 2022.6.22 | 杂志 | 『VOCE（ヴォーチェ）』2022年8月号             |     [微博](https://weibo.com/5177703789/LyNwgg8x9)                                                         |                                                              |
+| 2022.6.22 | CM | 参议院26次选举推动形象大使             |     [熟](https://www.bilibili.com/video/BV1fT411G7WC)                                                         |   [特设主页](https://soumu.go.jp/2022senkyo/)                                                           |
 | 2022.6.25 | 音乐剧 | 『四月は君の嘘』富山・オーバードホール(~6.26)                |                                                              |                                                              |
 | 2022.6.25 | 音乐 | 『Venue101EXTRA』NHK大阪ホール放送#1             |                                                              |                                                              |
 | 2022.6.26 | 番组 | 『バナナマンのせっかくグルメ』3時間SP 18:00~21:00            |                                                              |                                                              |
