--- a/year/2022.md
+++ b/year/2022.md
@@ -124,6 +124,7 @@
 | 2022.6.22 | 杂志 | 『VOCE（ヴォーチェ）』2022年8月号             |     [微博](https://weibo.com/5177703789/LyNwgg8x9)                                                         |                                                              |
 | 2022.6.22 | CM | 参议院26次选举推动形象大使             |     [熟](https://www.bilibili.com/video/BV1fT411G7WC)                                                         |   [特设主页](https://www.soumu.go.jp/2022senkyo/)                                                           |
 | 2022.6.25 | 音乐剧 | 『四月は君の嘘』富山・オーバードホール(~6.26)                |                                                              |                                                              |
+| 2022.6.25 | 电视剧 | TBS『OLD ROOKIE』ナビ  16:30〜17:00           |                                                              |                                                              |
 | 2022.6.25 | 音乐 | 『Venue101EXTRA』NHK大阪ホール放送#1             |                                                              |                                                              |
 | 2022.6.26 | 番组 | 『バナナマンのせっかくグルメ』3時間SP 18:00~21:00            |                                                              |                                                              |
 | 2022.6.26 | 电视剧 | 『OLD ROOKIE』21:00~             |                                                              |                                                              |
